fixed overlap behaviour on contact page

--- a/styles/modules/contact.scss
+++ b/styles/modules/contact.scss
@@ -2,7 +2,7 @@
 
 .contact{
   animation: fadeIn 1.2s;
-  height: 55vh;
+  height: 500px;
   &__fs {
     border: 1px lightgray solid;
     border-radius: 5px;
