--- a/styles/style.css
+++ b/styles/style.css
@@ -159,7 +159,7 @@ footer {
 
 .contact {
   animation: fadeIn 1.2s;
-  height: 55vh;
+  height: 500px;
 }
 .contact__fs {
   border: 1px lightgray solid;
